--- a/Model building.Rmd
+++ b/Model building.Rmd
@@ -27,7 +27,7 @@ library(broom)
 load("data/PAhour.rdata")
 ```
 
-**Basic analysis**
+### **Basic analysis**
 
 In the third question, after examining the relationship between price and ratings, we wanted to learn more about other factors that influence restaurant popularity. This time, instead of using only the number of reviews or the star rating, we combined them and assigned different weights to the “popularity_score”. We weighted the star rating down to 0.3 and the review count to 0.7, which reduces the impact of the problem we mentioned in Q1 that a low number of reviews can make the score inaccurate. another reason for the review count to be more weighted is that it reflects how many people are willing to go to the restaurant and leave a review, which is a much better indicator of the popularity of the restaurant than the star rating. This is a better indicator of a restaurant's popularity than star ratings. 
 
@@ -41,7 +41,7 @@ filtered_data <- filtered_data %>%
   mutate(popularity_score = 0.3 * stars + 0.7 * review_count)
 ```
 
-**Model building and Selection**
+### **Model building and Selection**
 
 At the beginning, we built separate linear models for more than ten characters, one of which is shown in the figure below, and when we saw the results, we realized that it did not accurately reflect the relationship between popular score and character.
 
@@ -60,7 +60,7 @@ qqline(residuals(credit_card_popularity_model), col = "red")
 
 ```
 
-**Reflection and improvement**
+### **Reflection and improvement**
 
 We considered the possibility that popular_score was heavily skewed (e.g., many values were very low and a few were very high), so we re-modeled using a logarithmic transformation, and this time we were much more satisfied with the results.
 
@@ -81,7 +81,7 @@ hours_popularity_model|>
   knitr::kable(digits = 3)
 ```
 
-**FINAL MODEL**
+### **FINAL MODEL**
 
 So this is our final model. There are some many characteristic will influence the popularity of the restaurants. As regional differences play a significant role in determining popular foods and restaurant characteristics. Tailoring offerings to local preferences and ensuring convenience-focused features like delivery and  provide reservation service for customer can positively impact restaurant popularity.
 
@@ -112,7 +112,7 @@ multiple_model|>
   knitr::kable(digits = 3)
 ```
 
-##QQ Plot of Residuals##
+### **QQ Plot of Residuals**
 
 We can see from the qq plot that the model fit is not bad. 
 
