--- a/Report.Rmd
+++ b/Report.Rmd
@@ -196,9 +196,9 @@ We developed an R Shiny application to help users explore restaurants in Pennsyl
 
 - **Map Visualization**: Displays restaurant locations within the selected city. Color intensity reflects the number of reviews, allowing users to gauge popularity by geographic area.
 
-- **Category Frequency**: Shows the distribution of restaurant categories across the city, enabling users to identify popular cuisines.
+- **Category Frequency**: Shows the distribution of restaurant categories across the city, enabling users to identify popular cuisines if they have't decided about category yet.
 
-- **Price and Rating Distribution**: Highlights the relationship between price range and star ratings. Users can see the distribution of restaurants grouped by star ratings and price per person.
+- **Price and Rating Distribution**: Highlights the relationship between price range and star ratings. Users can see the distribution of restaurants grouped by star ratings and price per person to help them know the actual price range and stars.
 
 Below is a screenshot to illustrate it.
 
