--- a/heatmap.Rmd
+++ b/heatmap.Rmd
@@ -42,8 +42,8 @@ Scatter plot between review count and review quality.
 
 ############ not used in the final report / website ########
 
-# #generate a map of PA with number of restaurants as the fill color of each county
-# county_restaurant_counts <- filterPA %>% 
+# # #generate a map of PA with number of restaurants as the fill color of each county
+# county_restaurant_counts <- filterPA %>%
 #   left_join(county, by = c("city" = "city")) %>%
 #   group_by(county) %>%
 #   summarize(restaurant_count = n()) %>%
@@ -59,21 +59,21 @@ Scatter plot between review count and review quality.
 #   mutate(county = tolower(county))
 # 
 # pa_counties <- pa_counties %>%
-#   mutate(NAME = tolower(NAME))  
+#   mutate(NAME = tolower(NAME))
 # 
 # # Join restaurant counts with county shapefile
 # pa_counties_restaurants <- pa_counties %>%
 #   left_join(county_restaurant_counts, by = c("NAME" = "county"))
 # 
 # ggplot(data = pa_counties_restaurants) +
-#   geom_sf(aes(fill = restaurant_count)) +  
-#   scale_fill_viridis_c(option = "plasma", na.value = "grey90") +  
-#   theme_minimal() +  
+#   geom_sf(aes(fill = restaurant_count)) +
+#   scale_fill_viridis_c(option = "plasma", na.value = "grey90") +
+#   theme_minimal() +
 #   labs(
 #     title = "Number of Restaurants by County in Pennsylvania",
 #     fill = "Restaurant Count"
 #   )
-# 
+
 # 
 # # Define the counties of interest
 # southeast_counties <- c("montgomery", "delaware", "chester", "bucks", "berks", "philadelphia")
